Fixed calendar on Mobile View.

--- a/app/assets/stylesheets/caesar.css.scss
+++ b/app/assets/stylesheets/caesar.css.scss
@@ -322,6 +322,9 @@ table tr th, table tr td {
 	height: 30px;
 }
 
+#calendar {
+	margin-bottom: 12px;
+}
 /*
 	 div.combobox	{font-family: Tahoma;font-size: 12px}
 	 div.combobox	{position: relative;zoom: 1}
